--- a/gb/21/9/20/n13248292.md
+++ b/gb/21/9/20/n13248292.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/uimzxm315/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/uimzxm315/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/uimzxm315/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/uimzxm315/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【直播】美智库：病毒溯源与中共的掩盖</h2>
-<a href="https://db8nk66phkh66.cloudfront.net/T3pqMTz3b"><img width="600" src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/uimzxm315/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://ddpul9mprf1bn.cloudfront.net/R6nqMTz3z"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>华府智库哈德逊研究所（Hudson Institute）举办论坛，主题为“病毒溯源与中共的掩盖”。（网络截图）
 </h6>
 <hr>
-	<p>【大纪元2021年09月21日讯】（大纪元记者陶明报导）美东时间9月20日（周一）下午4:50，华府智库<ahref="https://github.com/uimzxm315/djy/blob/master/gb/tag/%E5%93%88%E5%BE%B7%E9%80%8A%E7%A0%94%E7%A9%B6%E6%89%80.md#1">哈德逊研究所</a>（Hudson Institute）举办论坛，主题为“<ahref="https://github.com/uimzxm315/djy/blob/master/gb/tag/%E7%97%85%E6%AF%92%E6%BA%AF%E6%BA%90.md#1">病毒溯源</a>与中共的掩盖”。新唐人、大纪元将对此进行播出（中文同声翻译）。</p>
-<div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://db8nk66phkh66.cloudfront.net/T3pqMTz3b"><img width="600" src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/uimzxm315/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/XESl7tcv5NA?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
+	<p>【大纪元2021年09月21日讯】（大纪元记者陶明报导）美东时间9月20日（周一）下午4:50，华府智库<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%93%88%E5%BE%B7%E9%80%8A%E7%A0%94%E7%A9%B6%E6%89%80.md#1">哈德逊研究所</a>（Hudson Institute）举办论坛，主题为“<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%97%85%E6%AF%92%E6%BA%AF%E6%BA%90.md#1">病毒溯源</a>与中共的掩盖”。新唐人、大纪元将对此进行播出（中文同声翻译）。</p>
+<div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://ddpul9mprf1bn.cloudfront.net/R6nqMTz3z"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/XESl7tcv5NA?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
 	</div>
 <p>该智库表示，已有逾60万美国人死于COVID -19病毒，大约是所有美国战争中死亡人数的一半。政府需要竭尽所能，找出病毒来源，并了解中国共产党（CCP）要掩盖真相的原因。</p>
 <p>该智库认为，人们对这个问题的严重性缺乏认识，这令人不安。为了防止未来的大流行并保护美国人民免受进一步伤害，进行严肃、全面的调查至关重要。</p>
@@ -15,11 +15,11 @@
 <p>参与讨论的专家包括：</p>
 <p>凯文?布洛克（Kevin Brock），金融稳定中心高级研究员，前联邦调查局的情报助理主任；</p>
 <p>戴安?卡特勒（Diane Cutler），美国众议院能源和商业委员会雇员；</p>
-<p>托马斯?迪南诺（Thomas DiNanno），<ahref="https://github.com/uimzxm315/djy/blob/master/gb/tag/%E5%93%88%E5%BE%B7%E9%80%8A%E7%A0%94%E7%A9%B6%E6%89%80.md#1">哈德逊研究所</a>高级研究员、前美国务院武器管制局代理局长；</p>
+<p>托马斯?迪南诺（Thomas DiNanno），<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%93%88%E5%BE%B7%E9%80%8A%E7%A0%94%E7%A9%B6%E6%89%80.md#1">哈德逊研究所</a>高级研究员、前美国务院武器管制局代理局长；</p>
 <p>大卫?阿舍尔（David Asher），哈德逊研究所高级研究员、美国国务院前首席调查员。</p>
 <h3>网络收看方式：</h3>
-<p>大纪元新闻网：<ahref="https://github.com/uimzxm315/djy/blob/master/gb/nf1334917.md#1">https://github.com/uimzxm315/djy/blob/master/gb/nf1334917.md#1</a><br />
-大纪元YouTube直播：<ahref=""></a><a href="https://db8nk66phkh66.cloudfront.net/T3pqMTz3b"><img width="600" src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/uimzxm315/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/c/djynews">"></a><a href="https://db8nk66phkh66.cloudfront.net/T3pqMTz3b"><img width="600" src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/uimzxm315/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/c/djynews</a><br />
+<p>大纪元新闻网：<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/nf1334917.md#1">https://github.com/kobfyi3602/djy/blob/master/gb/nf1334917.md#1</a><br />
+大纪元YouTube直播：<ahref=""></a><a href="https://ddpul9mprf1bn.cloudfront.net/R6nqMTz3z"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/c/djynews">"></a><a href="https://ddpul9mprf1bn.cloudfront.net/R6nqMTz3z"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/c/djynews</a><br />
 大纪元脸书直播：<ahref="http://facebook.com/djy.news">facebook.com/djy.news</a><br />
 【支持】为真相护航 为沉默发声，就在今天，支持大纪元<ahref="https://donate.epochtimes.com/">https://donate.epochtimes.com</a></p>
 <p>新唐人大纪元《直播节目》制作组</p>
@@ -29,41 +29,35 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13221130.md#1">劳动节长周末11名温哥华警官遇袭受伤</a></li>
-<li><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13220674.md#1">周末市中心拍电视剧  Burrard桥将锁路</a></li>
-<li><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13220614.md#1">快餐厅美食广场就餐无需出示疫苗卡</a></li>
-<li><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13220595.md#1">9月8日：新增814宗确诊</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752381.md#1">【菁英论坛】应付内外困局 中共攻台视政治需求</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751958.md#1">【秦鹏直播】六四催生台湾民主 李鹏揭镇压真相（下）</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751269.md#1">【横河观点】美枪击案引禁枪激辩 拥枪派理由？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751038.md#1">【秦鹏直播】六四学生领袖：七上将反对镇压（上）</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/21/n10237420.md#1" target="_blank">中共淫乱的前生今世（4）央视“后宫”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/7/4/n3627160.md#1" target="_blank">心湖：中共是破坏道德的罪魁祸首</a></li><hr>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/25/n10086108.md#1" target="_blank">郑兢业：人吃与吃人（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/2/26/n2442949.md#1" target="_blank">【纪元特稿】中共打压 反助法轮功</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/2/n13205792.md#1">【未解之谜】 不懂中文 会唱中文歌 邓丽君归来？</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/7/23/n13108846.md#1">【命理】清朝时风水征验人宅吉凶的一些事</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/3/n13208894.md#1">【未解之谜】预言新解 激光雷达揭秘玛雅世界</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/3/n13208933.md#1">北洋女学教授转生三世容貌相同 写书讲果报</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/8/26/n13188418.md#1">古籍记载：瘟疫出现之前 疫鬼做标记</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13220351.md#1">【秦鹏直播】武汉病毒所被曝曾改造蝙蝠病毒</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13220267.md#1">【有冇搞错】阿富汗自古就产恐怖主义</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/9/n13220621.md#1">移美港人：目睹香港法治崩坏 不适合小孩成长</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13216420.md#1">赵薇再遭官媒点名 20年资本布局曝光</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217017.md#1">【拍案惊奇】赵薇卷入习江斗？传李嘉诚公子或出事</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217379.md#1">美军绝密无人机疑现身南海 为何无可匹敌</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217860.md#1">回顾赵薇当年有多红 网友挖出孙俪曾给她伴舞</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13218036.md#1">被指来自天王嫂训练营 郭富城妻哽咽首谈内情</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13219236.md#1">台网红486账号遭停权 脸书回应：涉及仇恨言论</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13220155.md#1">黄秋生自曝已抵台隔离 三个字评铁皮屋获大赞</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13215985.md#1">因台独言论遭FB禁言 台网红怒：文革蔓延到台湾</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13216262.md#1">空姐考考你：飞机上禁烟 为何设有烟灰缸？</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13218742.md#1">获救孤儿小象回野外 多年后带小孩去看恩人</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217337.md#1">台爆幼儿园群聚感染 3类儿童新冠重症风险高</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13216037.md#1">澳洲琴鸟模仿婴儿哭声 如原音重现</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/4/n13210459.md#1">古人怎么洁牙护齿？牙刷是怎么来的？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11953195.md#1">16岁学生致信武汉作家方方 引起轩然大波</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/uimzxm315/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/uimzxm315/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/20/n13248292.htm">【直播】美智库：病毒溯源与中共的掩盖</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/20/n13248292.htm">【直播】美智库：病毒溯源与中共的掩盖</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13248292.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/uimzxm315/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/uimzxm315/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/uimzxm315/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/21/9/20/n13248292.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
